--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,63 @@
-1
+name: Deploy frontend to GitHub Pages
+
+on:
+  push:
+    branches: ["main"]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Enable Yarn
+        run: corepack enable
+
+      - name: Install dependencies
+        working-directory: frontend
+        run: |
+          yarn install --ignore-engines
+
+      - name: Build
+        working-directory: frontend
+        env:
+          PUBLIC_URL: /Gym-App-inalF/
+        run: yarn build
+
+      - name: Ensure index.html exists
+        run: |
+          test -f frontend/build/index.html
+
+      - name: SPA fallback (optional)
+        run: |
+          cp frontend/build/index.html frontend/build/404.html
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: frontend/build
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+    steps:
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v4
